--- a/public/manifest.json
+++ b/public/manifest.json
@@ -9,11 +9,14 @@
     "scripting"
   ],
   "action": {
-      "default_popup": "popup/popup.html",
-      "default_icon": "images/youtube_icon.png"
+      "default_popup": "popup.html",
+      "default_icon": "youtube_icon.png"
     },
-    "background": {
-      "service_worker": "service-worker.js",
-      "type": "module"
-    }
+    "content_scripts": [
+      {
+        "js": ["content_script.js"],
+        "matches": ["https://www.youtube.com/*"],
+        "runAt": "document_end"
+      }
+    ]
 }
