--- a/package.json
+++ b/package.json
@@ -1,8 +1,7 @@
 {
   "name": "youtube_no_disturbance",
   "version": "1.0.0",
-  "description": "This project was bootstrapped with [Create React App](https://github.com/facebook/create-react-app).",
-  "main": "service-worker.js",
+  "description": "A chrome browser plugin to skip (skippable) ads, mute ads, and block pause on Youtube",
   "scripts": {
     "watch": "webpack --config webpack/webpack.config.js --watch",
     "build": "webpack --config webpack/webpack.config.js"
