Fix content script field to use run_at

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -16,7 +16,7 @@
       {
         "js": ["content_script.js"],
         "matches": ["https://www.youtube.com/*"],
-        "runAt": "document_end"
+        "run_at": "document_end"
       }
     ],
     "icons": {
