Correct spelling of YouTube

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,7 +1,7 @@
 {
   "manifest_version": 3,
-  "name": "Youtube No Disturbance",
-  "description": "An extension to automatically skip (skippable) ads, mute ads, and block \"Continue Watching\" popup. Supported for Firefox and Chrome",
+  "name": "YouTube No Disturbance",
+  "description": "An extension to automatically skip (skippable) ads, mute ads, and block \"Continue Watching\" popup on YouTube. Supported for Firefox and Chrome",
   "homepage_url": "https://github.com/da593",
   "version": "1.0",
   "host_permissions": ["https://www.youtube.com/*"],
