--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "youtube_no_disturbance",
   "version": "1.0.0",
-  "description": "An extension to automatically skip (skippable) ads, mute ads, and block \"Continue Watching\" popup. Supported for Firefox and Chrome",
+  "description": "An extension to automatically skip (skippable) ads, mute ads, and block \"Continue Watching\" popup on YouTube. Supported for Firefox and Chrome",
   "scripts": {
     "watch": "webpack --config webpack/webpack.config.js --watch",
     "build": "webpack --config webpack/webpack.config.js"
