Change id in browser specific settings due to dupe

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -25,7 +25,7 @@
     },
     "browser_specific_settings": {
       "gecko": {
-        "id": "youtubenodisturbance@example.com"
+        "id": "youtubenodisturbance@firefox.com"
       }
     }
 }
