--- a/package.json
+++ b/package.json
@@ -16,5 +16,8 @@
     "typescript": "^5.2.2",
     "webpack": "^5.88.2",
     "webpack-cli": "^5.1.4"
+  },
+  "dependencies": {
+    "codemirror": "^6.0.1"
   }
 }
