--- a/public/manifest.json
+++ b/public/manifest.json
@@ -18,6 +18,9 @@
       "page": "options.html",
       "open_in_tab": true
     },    
+    "background": {
+      "scripts": ["new_install_script.js"]
+    },
     "content_scripts": [
       {
         "matches": ["https://www.youtube.com/*"],
